--- a/TODO/server/package.json
+++ b/TODO/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "devstart": "nodemon index.js"
+    "devstart": "nodemon server/index.js"
   },
   "keywords": [],
   "author": "",
